Bug 339251 - Crash during elements deletion in forms
Summary: Crash during elements deletion in forms
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9 Alpha
Platform: Other Linux
: NOR crash
Target Milestone: 2.9
Assignee: Roman Shtemberko
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-09-20 21:11 UTC by Michal Poteralski
Modified: 2015-02-25 21:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Poteralski 2014-09-20 21:11:25 UTC
Kexi crashes during deletion of 3 or more (selected) the same elements in Forms. 
It reproduces for all elements except: Text Editor, Image Box, Slider 

Reproducible: Always

Steps to Reproduce:
1. Create a new Form
2. Put three Labels into Form
3. Select all (three) labels and delete. 

Actual Results:  
Crash

Expected Results:  
Labels should be removed.

SIGSEGV 
0	QString	qstring.h	726	0x7fe1cc18a6de	
1	KFormDesigner::ObjectTreeItem::name	objecttree.cpp	216	0x7fe1cc18a6de	
2	KFormDesigner::WidgetTreeWidgetItem::name	WidgetTreeWidget.cpp	170	0x7fe1cc19b43d	
3	KFormDesigner::WidgetTreeWidget::findItem	WidgetTreeWidget.cpp	294	0x7fe1cc19b5dd	
4	KFormDesigner::WidgetTreeWidget::selectWidget	WidgetTreeWidget.cpp	334	0x7fe1cc19b941	
5	KFormDesigner::WidgetTreeWidget::qt_static_metacall	WidgetTreeWidget.moc	64	0x7fe1cc19d728	
6	QMetaObject::activate		3539	0x7fe21148c87a	
7	KFormDesigner::Form::selectionChanged	form.moc	290	0x7fe1cc174054	
8	KFormDesigner::Form::emitSelectionChanged	form.cpp	2342	0x7fe1cc182f55	
9	KFormDesigner::Form::selectWidgetInternal	form.cpp	938	0x7fe1cc1831aa	
10	KFormDesigner::Form::selectWidget	form.cpp	894	0x7fe1cc183619	
11	KFormDesigner::WidgetTreeWidget::selectWidgetForItem	WidgetTreeWidget.cpp	352	0x7fe1cc19b797	
12	KFormDesigner::WidgetTreeWidget::slotSelectionChanged	WidgetTreeWidget.cpp	406	0x7fe1cc19becb	
13	KFormDesigner::WidgetTreeWidget::qt_static_metacall	WidgetTreeWidget.moc	68	0x7fe1cc19d6e5	
14	QMetaObject::activate		3539	0x7fe21148c87a	
15	QTreeWidget::itemSelectionChanged		275	0x7fe2123d4633	
16	QTreeWidgetPrivate::_q_selectionChanged		2317	0x7fe2123d8078	
17	QMetaObject::activate		3539	0x7fe21148c87a	
18	QItemSelectionModel::selectionChanged		165	0x7fe2123b3857	
19	QItemSelectionModelPrivate::_q_rowsAboutToBeRemoved		680	0x7fe2123b7823	
20	QItemSelectionModel::qt_static_metacall		112	0x7fe2123ba859	
...	<More>
Comment 1 Jarosław Staniek 2014-12-04 10:57:09 UTC
Back to "confirmed".
Comment 2 Roman Shtemberko 2015-01-19 09:16:30 UTC
Git commit 9641bfa7a27854acd327a88a857a4d966fef5cea by Roman Shtemberko.
Committed on 19/01/2015 at 09:15.
Pushed by rshtemberko into branch 'calligra/2.9'.

Fix crash during elements deletion in forms
REVIEW:122036

M  +4    -2    kexi/formeditor/WidgetTreeWidget.cpp

http://commits.kde.org/calligra/9641bfa7a27854acd327a88a857a4d966fef5cea