Fix crash during elements deletion in forms

BUG:339251
REVIEW:122036